--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jade": "~1.11.0",
     "mongoose": "^5.6.4",
     "morgan": "~1.9.1",
-    "node-gyp": "^5.0.2"
+    "node-gyp": "^5.0.2",
+    "constantinople": "3.1.1",
+    "clean-css": "4.1.11"g
   }
 }
